# traju

./: .gitignore  LICENSE  README.md  poetry.toml  pyproject.toml  setup.cfg  setup.py
tests/: test_helpers.py
tests/data/: top.prmtop  traj.nc
traju/: __init__.py  cli.py  helpers.py  traju.py
